# ish

./: .dockerignore  .gitignore  .goreleaser.yml  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  MIGRATION_COMPLETE.md  Makefile  README.md  code-review.md  docker-compose.yml  e2e_test.go  go.mod  go.sum  product-description.md
.github/workflows/: release.yml
.scratch/: test_homeassistant_integration.sh
cmd/ish/: main.go  main_test.go
docs/: ARCHITECTURE.md  DATABASE_MIGRATIONS.md  ERROR_IMPLEMENTATION_EXAMPLES.md  ERROR_MIGRATION_SUMMARY.md  ERROR_QUICKSTART.md  ERROR_RESPONSES.md  ERROR_RESPONSES_INDEX.md  ERROR_RESPONSE_ANALYSIS.md  OFFICE_OS_SUPPORT.md  REQUIRED_ENDPOINTS.md  TIMEZONE_AND_MIGRATIONS_FIX.md  blog-post.md  brief.md  spec.md  v2-roadmap.md
docs/plans/: 2025-12-01-admin-ui-design.md  2025-12-01-admin-ui-implementation.md  2025-12-01-fake-google-box-design.md  2025-12-01-ish-implementation.md  2025-12-05-plugin-architecture-design.md  2025-12-05-plugin-architecture.md  2025-12-06-discord-plugin-and-store-refactor.md  2025-12-06-github-plugin-design.md  2025-12-06-github-plugin-implementation.md  2025-12-06-twilio-plugin-design.md  2025-12-06-twilio-plugin-implementation.md  2025-12-07-plugin-admin-data-integration-design.md
docs/plugins/: DEVELOPMENT.md  example-stripe-plugin.md
examples/: README.md  github.py  google_calendar.py  google_gmail.py  google_tasks.py  homeassistant.py  pyproject.toml  sendgrid.py  test_homeassistant_scenarios.py  test_websocket.py  twilio.py
internal/admin/: handlers.go  handlers_test.go  (+5 more)
(+126 files in other folders)
